cmake_minimum_required(VERSION 3.29)
project(metropolia)

set(CMAKE_CXX_STANDARD 20)

add_executable(metropolia
        #        test/main.cpp
        #        test/Time.h
        #        test/Time.cpp
        #        lab-01.cpp
        #        lab-02a.cpp
        #        lab-02b.cpp
        #        lab-03a.cpp
        #        lab-03b.cpp
        #        lab-04a.cpp
        #        lab-05a.cpp
        #        lab-06a/lab-06a.cpp
        #        lab-06a/Time.h
        #        lab-06a/Time.cpp
        #        lab-06b/lab-06b.cpp
        #        lab-06b/Time.cpp
        #        lab-06b/Time.cpp
        lab-07a.cpp)
